--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 	<head>
 		<title>Bot de chat Gregoland sur Discord</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<h1>Bienvenue</h1>
 		<p>
-			Lorem ipsum, dolor sit amet
+		Lorem ipsum, dolor sit amet
 		</p>
 	</body>
 </html>
