--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Bot de chat Gregoland sur Discord</title>
-		<link rel="stylesheet" href="./style.css"/>
+		<link rel="stylesheet" type="text/css" href="./style.css"/>
 	</head>
 	<body>
 		<h1>Bienvenue</h1>
