--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>Bot de chat Gregoland sur Discord</title>
-		<link rel="stylesheet" type="text/css" href="./style.css"/>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<h1>Bienvenue</h1>
+		<h1>Bot de Chat Discord</h1>
 		<p>
-		Lorem ipsum, dolor sit amet
+		Lorem ipsum, dolor sit amet test test
 		</p>
 	</body>
 </html>
