--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<h1>Bot de Chat Discord</h1>
 		<span>Un bot discord <span class="semibold">révolutionnaire</span> !</span><br/>
-		<a class="button" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&redirect_uri=https%3A%2F%2Fgregoland-chatbot.herokuapp.com%2F&scope=bot">Ajouter au serveur</a>
+		<a class="button" target="invite" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&redirect_uri=https%3A%2F%2Fgregoland-chatbot.herokuapp.com%2F&scope=bot">Ajouter au serveur</a>
+		<iframe width="100%" height="800px" name="invite"></iframe>
 	</body>
 </html>
