--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<div class="topnav">
+			<a class="active" href="/">Accueil</a>
+			<a href="/cmds.html">Commandes</a>
+			<a href="/login.html">Se connecter</a>
+		</div> 
 		<h1>Bot de Chat Discord</h1>
 		<span>Un bot discord <span class="semibold">révolutionnaire</span> !</span><br/>
 		<a class="button" target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&scope=bot">Ajouter au serveur</a>
