--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<div class="topnav">
 			<a class="active" href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<a href="/login.html">Se connecter</a>
+			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<h1>Bot de Chat Discord</h1>
 		<span>Un bot discord <span class="semibold">révolutionnaire</span> !</span><br/>
