--- a/public/login.html
+++ b/public/login.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<div class="topnav">
-			<a href="/">Accueil</a>
+			<a class="active" href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<a class="active" href="/404.html">Paumé</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
-		<h1>Erreur 404</h1>
-		<span>Vous vous êtes <span class="semibold">trompé</span> !</span>
+		<h1>Bot de Chat Discord</h1>
+		<h2>Se connecter</h2>
+		<a class="button" target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&scope=bot">Se connecter</a>
 	</body>
 </html>
