--- a/public/login.html
+++ b/public/login.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		<div class="topnav">
-			<a class="active" href="/">Accueil</a>
+			<a href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<a class="right" href="/login.html">Se connecter</a>
+			<a class="right active" href="/login.html">Se connecter</a>
 		</div> 
 		<h1>Bot de Chat Discord</h1>
 		<h2>Se connecter</h2>
