--- a/public/cmds.html
+++ b/public/cmds.html
@@ -11,7 +11,7 @@
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<h1>Bot de Chat Discord</h1>
-		<span>Liste des commandes :</span><br/>
+		<h2>Liste des commandes :</h2><br/>
 		<table style="width:100%;">
 			<tr>
 				<th>Commande</th>
