--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
+		<div class="pub"></div>
 		<div class="topnav">
 			<a class="active" href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
