--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 			<a href="/cmds.html">Commandes</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
-		<a target="_blank" href="https://discord.gg/"><div class="pub"></div></a>
+		<a target="_blank" href="https://discord.gg/RjxK6Wt"><div class="pub"></div></a>
 		<h1>Bot de Chat Discord</h1>
 		<span>Un bot discord <span class="semibold">révolutionnaire</span> !</span><br/>
 		<a class="button" target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&scope=bot">Ajouter au serveur</a>
