--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		</div> 
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
 			<div class="pub">
-				<img src="burn.png" height="100%" alt="Venez nombreux !" />
+				<img class="pub" src="burn.png" height="100%" alt="Venez nombreux !" />
 			</div>
 		</a>
 		<h1>Bot de Chat Discord</h1>
