--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
 			<div class="pub">
 				<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
+				<span class="pubtext">Rejoignez le serveur !</span>
 			</div>
 		</a>
 		<h1>Bot de Chat Discord</h1>
