--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,17 @@
 		</div> 
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
 			<div class="pub">
-				<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
-				<span class="pubtext">Rejoignez le serveur !</span>
+				<table style="cursor: pointer;">
+					<tr style="cursor: pointer;">
+						<td style="cursor: pointer;">
+							<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
+						</td>
+						<td style="cursor: pointer;color:black;font-family: 'whitney';font-weight: 600;">
+							<span>Clique pour...</span><br/>
+							<span class="pubtext">Rejoindre le serveur !</span>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</a>
 		<h1>Bot de Chat Discord</h1>
