--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
 		<div class="topnav">
 			<a href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<a class="right active" href="/login.html">Se connecter</a>
+			<a class="right active" href="/api/discord/login">Se connecter</a>
 		</div> 
 		<h1>Bot de Chat Discord</h1>
 		<h2>Se connecter</h2>
