--- a/public/login.html
+++ b/public/login.html
@@ -8,10 +8,10 @@
 		<div class="topnav">
 			<a href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<a class="right active" href="/api/discord/login">Se connecter</a>
+			<a class="right active" href="/login.html">Se connecter</a>
 		</div> 
 		<h1>Bot de Chat Discord</h1>
 		<h2>Se connecter</h2>
-		<a class="button" target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&scope=bot">Se connecter</a>
+		<a class="button" target="_blank" href="/api/discord/login">Se connecter</a>
 	</body>
 </html>
