--- a/public/login.html
+++ b/public/login.html
@@ -12,6 +12,6 @@
 		</div> 
 		<h1>Bot de Chat Discord</h1>
 		<h2>Se connecter</h2>
-		<a class="button" target="_blank" href="/api/discord/login">Se connecter</a>
+		<a class="button" href="/api/discord/login">Se connecter</a>
 	</body>
 </html>
