--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 				</table>
 			</div>
 		</a>
-		<iframe src="https://discordapp.com/widget?id=681549703212564547&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+		<iframe style="position:fixed;" src="https://discordapp.com/widget?id=681549703212564547&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 		<h1>Bot de Chat Discord</h1>
 		<span>Un bot discord <span class="semibold">révolutionnaire</span> !</span><br/>
 		<a class="button" target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=0&scope=bot">Ajouter au serveur</a>
