--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<iframe style="position:fixed;" src="https://discordapp.com/widget?id=681549703212564547&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+		<div id="myModal" class="modal">
+			<!-- Modal content -->
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<iframe src="https://discordapp.com/widget?id=681549703212564547&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+			</div>
+		</div>
 		<div class="topnav">
 			<a class="active" href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
+			<button class="right">Discord</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
