--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>GREGOLAND CHAT BOT | Bot discord</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<script type="text/js" src="modal.js" />
 	</head>
 	<body>
 		<div id="myModal" class="modal">
