--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>GREGOLAND CHAT BOT | Bot discord</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<script type="text/js" src="modal.js" />
+		<script src="modal.js"></script>
 	</head>
 	<body>
 		<div id="myModal" class="modal">
