--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		<div class="topnav">
 			<a class="active" href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<button class="right">Discord</a>
+			<a id="myBtn" class="right">Discord</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
