--- a/public/404.html
+++ b/public/404.html
@@ -9,6 +9,7 @@
 			<a href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
 			<a class="active" href="/404.html">Paumé</a>
+			<a class="right" target="_blank" href="https://discord.gg/RjxK6Wt">Discord</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<h1>Erreur 404</h1>
