--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<div class="topnav">
 			<a class="active" href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
-			<a class="right" href="https://discord.gg/RjxK6Wt">Discord</a>
+			<a class="right" target="_blank" href="https://discord.gg/RjxK6Wt">Discord</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
