--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,7 @@
 		<div class="topnav">
 			<a href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
+			<a class="right" target="_blank" href="https://discord.gg/RjxK6Wt">Discord</a>
 			<a class="right active" href="/login.html">Se connecter</a>
 		</div> 
 		<h1>Bot de Chat Discord</h1>
