--- a/public/404.html
+++ b/public/404.html
@@ -12,6 +12,21 @@
 			<a class="right" target="_blank" href="https://discord.gg/RjxK6Wt">Discord</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
+		<a target="_blank" href="https://discord.gg/RjxK6Wt">
+			<div class="pub">
+				<table style="cursor: pointer;">
+					<tr style="cursor: pointer;">
+						<td style="cursor: pointer;">
+							<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
+						</td>
+						<td style="cursor: pointer;color:black;font-family: 'whitney';font-weight: 600;">
+							<span>Clique pour...</span><br/>
+							<span class="pubtext">Rejoindre le serveur !</span>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</a>
 		<h1>Erreur 404</h1>
 		<span>Vous vous êtes <span class="semibold">trompé</span> !</span>
 	</body>
