--- a/public/cmds.html
+++ b/public/cmds.html
@@ -11,6 +11,21 @@
 			<a class="right" target="_blank" href="https://discord.gg/RjxK6Wt">Discord</a>
 			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
+		<a target="_blank" href="https://discord.gg/RjxK6Wt">
+			<div class="pub">
+				<table style="cursor: pointer;">
+					<tr style="cursor: pointer;">
+						<td style="cursor: pointer;">
+							<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
+						</td>
+						<td style="cursor: pointer;color:black;font-family: 'whitney';font-weight: 600;">
+							<span>Clique pour...</span><br/>
+							<span class="pubtext">Rejoindre le serveur !</span>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</a>
 		<h1>Bot de Chat Discord</h1>
 		<h2>Liste des commandes :</h2><br/>
 		<table style="width:100%;">
