--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>GREGOLAND CHAT BOT | Bot discord</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		<div class="topnav">
