--- a/public/cmds.html
+++ b/public/cmds.html
@@ -19,7 +19,7 @@
 							<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
 						</td>
 						<td style="cursor: pointer;color:black;font-family: 'whitney';font-weight: 600;">
-							<span>Clique pour...</span><br/>
+							<span style="cursor: pointer;">Clique pour...</span><br/>
 							<span class="pubtext">Rejoindre le serveur !</span>
 						</td>
 					</tr>
