--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -2,14 +2,15 @@
 <html>
 	<head>
 		<title>GREGOLAND CHAT BOT | Bot discord</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
 	</head>
 	<body>
 		<div class="topnav">
 			<a href="/">Accueil</a>
 			<a href="/cmds.html">Commandes</a>
+			<a class="active" href="/404.html">Merci</a>
 			<a class="right" target="_blank" href="https://discord.gg/RjxK6Wt">Discord</a>
-			<a class="right active" href="/login.html">Se connecter</a>
+			<a class="right" href="/login.html">Se connecter</a>
 		</div> 
 		<a target="_blank" href="https://discord.gg/RjxK6Wt">
 			<div class="pub">
@@ -26,8 +27,7 @@
 				</table>
 			</div>
 		</a>
-		<h1>Bot de Chat Discord</h1>
-		<h2>Se connecter</h2>
-		<a class="button" href="/api/discord/login">Se connecter</a>
+		<h1>MERCI !</h1>
+		<h2>Vous avez mis mon bot sur votre serveur !</h2>
 	</body>
 </html>
