--- a/public/404.html
+++ b/public/404.html
@@ -17,10 +17,10 @@
 				<table style="cursor: pointer;">
 					<tr style="cursor: pointer;">
 						<td style="cursor: pointer;">
-							<img class="burn" src="/burn.png" height="100%" alt="Venez nombreux !" />
+							<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
 						</td>
 						<td style="cursor: pointer;color:black;font-family: 'whitney';font-weight: 600;">
-							<span>Clique pour...</span><br/>
+							<span style="cursor: pointer;">Clique pour...</span><br/>
 							<span class="pubtext">Rejoindre le serveur !</span>
 						</td>
 					</tr>
