--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
 		</a>
 		<h1>Bot de Chat Discord</h1>
 		<span>Un bot discord <span class="semibold">révolutionnaire</span> !</span><br/>
-		<a class="button" href="https://discordapp.com/api/oauth2/authorize?client_id=684464572333293605&permissions=8&redirect_uri=https%3A%2F%2Fgregoland-chatbot.herokuapp.com%2Fapi%2Fbotregister%2Fcallback&response_type=code&scope=bot%20identify">Ajouter au serveur</a>
+		<a class="button" href="/api/botregister/login">Ajouter au serveur</a>
 	</body>
 </html>
