--- a/public/thankyou.html
+++ b/public/thankyou.html
@@ -19,7 +19,7 @@
 						<td style="cursor: pointer;">
 							<img class="burn" src="burn.png" height="100%" alt="Venez nombreux !" />
 						</td>
-						<td style="cursor: pointer;color:black;font-family: 'whitney';font-weight: 600;">
+						<td style="cursor: pointer;color:black;font-family:whitney;font-weight: 600;">
 							<span style="cursor: pointer;">Clique pour...</span><br/>
 							<span class="pubtext">Rejoindre le serveur !</span>
 						</td>
